feat: Exception handle improved change: @Valid annotation added in creation and update endpoints (controllers) change: new exceptions added in services fix: exceptions changed in tests fix: update tour package state fixed (previously AVAILABLE state defined every time)